--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-6 col-md-3"><img src="romancham.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="khushi.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="neru.jpg" class="img-fluid rounded shadow"></div>
-            <div class="col-12 col-md-3 mx-auto"><img src="pheonix.jpg" class="img-fluid rounded shadow"></div>
+            <div class="col-6 col-md-3" ><img src="pheonix.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="jawan.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="romancham.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="khushi.jpg" class="img-fluid rounded shadow"></div>
@@ -55,7 +55,7 @@
             <div class="col-6 col-md-3"><img src="romancham.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="khushi.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="neru.jpg" class="img-fluid rounded shadow"></div>
-            <div class="col-12 col-md-3 mx-auto"><img src="pheonix.jpg" class="img-fluid rounded shadow"></div>
+            <div class="col-6 col-md-3"><img src="pheonix.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="jawan.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="romancham.jpg" class="img-fluid rounded shadow"></div>
             <div class="col-6 col-md-3"><img src="khushi.jpg" class="img-fluid rounded shadow"></div>
